Bug 358276 - Crash on removing association point
Summary: Crash on removing association point
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.18.0 (KDE Applications 15.12.0)
Platform: Other Other
: NOR crash
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-20 20:29 UTC by Ralf Habacker
Modified: 2016-01-20 20:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.18.2 (KDE Applications 15.12.2)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-01-20 20:29:58 UTC
Umbrello crashes on removing a point from an association.

Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. add two classes and add an association between them
3. select the association and right-click "add point" two times
4. select the last added point and right-click on "remove point"

Actual Results:  
umbrello crashes

Expected Results:  
umbrello should not crash
Comment 1 Ralf Habacker 2016-01-20 20:35:26 UTC
Git commit 7fc95d9ba5a850ab882a4460cf44934738c06500 by Ralf Habacker.
Committed on 20/01/2016 at 20:35.
Pushed by habacker into branch 'Applications/15.12'.

Fix 'Crash on removing association point'.
FIXED-IN:2.18.2 (KDE Applications 15.12.2)

M  +4    -0    umbrello/umlwidgets/associationline.cpp

http://commits.kde.org/umbrello/7fc95d9ba5a850ab882a4460cf44934738c06500