Fix 'Crash on removing association point'.

BUG:358276
FIXED-IN:2.18.2 (KDE Applications 15.12.2)